<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <com.example.markdownapp.MarkDownText
        android:id="@+id/tv_mark_down"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/overlayEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/overlayEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:gravity="top|start"
        android:hint="@string/message_at"
        android:inputType="textMultiLine"
        android:maxHeight="@dimen/_100sdp"
        android:overScrollMode="always"
        android:padding="16dp"
        android:scrollbars="vertical"
        android:textColor="@color/white"
        android:textColorHint="@color/light_grey"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toStartOf="@+id/selector"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sendBtn"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/boldButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:text="@string/bold"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp" />

        <Button
            android:id="@+id/italicButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:backgroundTint="@color/orange"
            android:text="@string/italic"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp" />

        <Button
            android:id="@+id/mentionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:backgroundTint="@color/orange"
            android:text="@string/mention"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/sendBtn"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/strike_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:text="@string/strike"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp" />

        <Button
            android:id="@+id/bullet_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:text="@string/bullet"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp" />

        <Button
            android:id="@+id/link_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:text="@string/add_link"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp" />

    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/sendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/post_send_button" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/selector"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_margin="8dp"
        android:src="@drawable/password_eye"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/overlayEditText"
        app:srcCompat="@drawable/post_send_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
